Fioritura page completed

--- a/bolt.html
+++ b/bolt.html
@@ -140,7 +140,7 @@
             </article>
 
             <article class="featureCard particleBlocker">
-              <img class="featureImage" src="assets/Bolt/images/Bolt_Sounds.webp" alt="">
+              <img class="featureImage" src="assets/Bolt/images/BoltSounds.webp" alt="">
               <h3 class="featureTitle">Intégration des sons avec Wwise</h3>
 
               <p>
@@ -153,7 +153,7 @@
             </article>
 
             <article class="featureCard particleBlocker">
-              <img class="featureImage" src="assets/Bolt/images/Bolt_ExplosiveBarrel.webp" alt="">
+              <img class="featureImage" src="assets/Bolt/images/ExplosiveBarrel.webp" alt="">
               <h3 class="featureTitle">Baril explosif</h3>
 
               <p>
@@ -166,7 +166,7 @@
             </article>
 
             <article class="featureCard particleBlocker">
-              <img class="featureImage" src="assets/Bolt/images/Bolt_AnimationBlueprint.webp" alt="">
+              <img class="featureImage" src="assets/Bolt/images/Bolt_AnimationBlueprint.png" alt="">
               <h3 class="featureTitle">Animation blueprint</h3>
 
               <p>
@@ -177,7 +177,7 @@
               </p>
             </article>
             <article class="featureCard particleBlocker">
-              <img class="featureImage" src="assets/Bolt/images/Bolt_HealingCrates.webp" alt="">
+              <img class="featureImage" src="assets/Bolt/images/HealingCrates.webp" alt="">
               <h3 class="featureTitle">Boîtes de soins</h3>
 
               <p>
