--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
             
             <header class="header" data-component="Header">
                 <a href="index.html" class="header__brand">
-                    <img class="logo" src="assets/images/logo.png" alt="logo_gab" />
+                    <img class="logo" src="assets/Non-Project/logo.webp" alt="logo_gab" />
                 </a>
 
                 <nav class="nav-primary">
@@ -133,11 +133,10 @@
                                 preload="auto"></video>
                         </div>
 
-                        <h3 class="projectTitle" data-i18="projects.project1.title">Bolt'n'Punch</h3>
-                        <p class="projectMeta" data-i18="projects.project1.meta">Beat'em Up <br /> Unreal Engine 5</p>
-                        <p class="projectDescription" data-i18="projects.project1.description">Bolt’n’Punch est un
-                            jeu...</p>
-                        <a href="templateProject1.html" class="projectButton" data-i18="projects.project1.cta">Voir le
+                        <h3 class="projectTitle" data-i18="projects.project1.title">Fioritura</h3>
+                        <p class="projectMeta" data-i18="projects.project1.meta">Jeu de puzzle <br /> Unreal Engine 5</p>
+                        <p class="projectDescription" data-i18="projects.project1.description">Fioritura est le résultat de la collaboration d’une équipe de 13 passionnés à l’UQAT, avec moi en tant qu’intégrateur. Le jeu vous plonge dans un jardin mystérieux, combinant art et innovation.</p>
+                        <a href="fioritura.html" class="projectButton" data-i18="projects.project1.cta">Voir le
                             projet</a>
                     </article>
                     <article class="projectCard has-video particleBlocker" data-scrolly='fromBottom'>
