--- a/fioritura.html
+++ b/fioritura.html
@@ -67,26 +67,26 @@
           <!-- HERO -->
           <section class="techHero">
             <div class="heroLeft">
-              <h1 class="heroTitle">TEMPLATE 2</h1>
+              <h1 class="heroTitle">Fioritura</h1>
 
               <p class="heroDescription">
-                Bolt’N’Punch est un jeu d’action à la première personne développé à l’UQAT
-                par une équipe de 25 finissants, publié sur Steam.
+                Développé à l’UQAT par une équipe de 13 personnes sur Unreal Engine 5, Fioritura est un jeu de puzzle mêlant exploration
+                artistique et mécaniques originales.
               </p>
 
               <ul class="heroMeta">
-                <li>Unreal Engine</li>
+                <li>Unreal Engine 5</li>
                 <li>Blueprints</li>
-                <li>Publié sur Steam</li>
+                <li>Character controller</li>
               </ul>
             </div>
 
             <div class="heroRight">
               <div class="videoContainer" data-component="PlayableVideo">
 
-                <video playsinline preload="metadata" poster="assets/images/Big-Horizontal.png">
+                <video playsinline preload="metadata" poster="assets/Fioritura/images/Fioritura_Splash_Project_Page.webp">
 
-                  <source src="assets/Bolt/videos/Bolt'n'PunchGameplayTrailer.mp4" type="video/mp4">
+                  <source src="assets/Fioritura/videos/Fioritura Teaser.mp4" type="video/mp4">
                 </video>
 
                 <button class="playButton" aria-label="Lire la vidéo">
@@ -97,6 +97,23 @@
             </div>
           </section>
 
+           <!-- BREAKDOWN : TEMPLATE 1 -->
+          <section class="techBreakdownArticle">
+            <div class="breakdownMedia">
+              <img src="assets/Fioritura/images/Fioritura_CharacterController.webp" alt="">
+            </div>
+
+            <div class="breakdownContent">
+              <h2 class="breakdownTitle">Mon rôle dans le projet</h2>
+
+              <p>
+                J’ai eu le plaisir de développer le character controller isométrique, de concevoir l’architecture du système de
+                power-ups à l’aide d’event dispatchers et d’implémenter la mécanique phare de la fleur Éthéralys. J’ai aussi participé
+                activement au débogage et à l’optimisation du projet en vue de la preuve technique.
+              </p>
+            </div>
+          </section>
+
           <!-- FEATURES -->
           <section class="techFeatures">
             <h2 class="sectionTitle">Systèmes clés</h2>
@@ -104,77 +121,49 @@
             <div class="featuresGrid">
 
               <article class="featureCard particleBlocker">
-                <img class="featureImage" src="assets/images/Big-Horizontal.png" alt="">
-                <h3 class="featureTitle">Système de hype</h3>
+                <img class="featureImage" src="assets/Fioritura/images/FiorituraCodeOpti.webp" alt="">
+                <h3 class="featureTitle">Character controller</h3>
 
                 <p>
-                  Nous souhaitions encourager l’utilisation des
-                  <strong>attaques spéciales</strong> plutôt que le simple
-                  enchaînement de coups de base.
+                  En tant que programmeur, j’ai développé le character controller isométrique, en assurant des déplacements fluides sans gestion de sauts. J’ai également ajusté le comportement de la caméra et itéré sur le système jusqu’à obtenir un controller stable et fonctionnel.
                 </p>
 
+              </article>
+
+              <article class="featureCard particleBlocker">
+                <img class="featureImage" src="assets/Fioritura/images/FiorituraPowerUp.webp" alt="">
+                <h3 class="featureTitle">System de Power Up</h3>
+
                 <p>
-                  J’ai pris en charge
-                  <strong>l’implémentation complète</strong> de la logique
-                  et l’équilibrage du système.
+                  J’ai ensuite conçu le système de power-ups basé sur trois fleurs offrant des pouvoirs distincts. J’ai mis en place une architecture permettant des transitions fluides entre les états et une interaction cohérente avec le personnage et l’environnement. Le système reposait sur un event dispatcher, utilisé pour notifier les objets concernés lors des changements de pouvoir.
                 </p>
               </article>
 
               <article class="featureCard particleBlocker">
-                <img class="featureImage" src="assets/images/Big.png" alt="">
-                <h3 class="featureTitle">Enemy AI</h3>
+                <img class="featureImage" src="assets/Fioritura/images/FiorituraFlower.webp" alt="">
+                <h3 class="featureTitle">Fleur éthéralys</h3>
 
                 <p>
-                  Intelligence basée sur
-                  <strong>Behavior Tree</strong>
-                  et système de perception personnalisé.
-                </p>
-              </article>
-
-              <article class="featureCard particleBlocker">
-                <img class="featureImage" src="assets/images/Big.png" alt="">
-                <h3 class="featureTitle">Time rewind</h3>
-
-                <p>
-                  Mécanique centrale avec
-                  <strong>limites d’utilisation</strong>
-                  et conséquences en jeu.
+                  J’ai développé la mécanique de la fleur éthéralys, basée sur un système de projection d’esprit avec changement d’état du personnage. Cette fonctionnalité permettait le déplacement d’une entité détachée, capable d’ignorer certaines collisions, d’interagir avec des objets ciblés et de déclencher une téléportation via un pot récepteur. J’ai géré la synchronisation entre le corps et l’esprit, la gestion des collisions spécifiques et les transitions d’états associées.
                 </p>
               </article>
 
             </div>
           </section>
 
-          <!-- BREAKDOWN : TEMPLATE 1 -->
-          <section class="techBreakdownArticle">
-            <div class="breakdownMedia">
-              <img src="assets/images/Big-Horizontal.png" alt="">
-            </div>
-
-            <div class="breakdownContent">
-              <h2 class="breakdownTitle">Architecture</h2>
-
-              <p>
-                Le projet est structuré autour de
-                <strong>composants découplés</strong>
-                facilitant l’itération rapide.
-              </p>
-            </div>
-          </section>
+         
 
           <!-- BREAKDOWN : TEMPLATE 2 (reverse) -->
           <section class="techBreakdownArticle reverse">
             <div class="breakdownMedia">
-              <img src="assets/images/Big-Horizontal.png" alt="">
+              <img src="assets/Fioritura/images/FiorituraPressure.webp" alt="">
             </div>
 
             <div class="breakdownContent">
-              <h2 class="breakdownTitle">Défis techniques</h2>
+              <h2 class="breakdownTitle">Défis technique</h2>
 
               <p>
-                Optimisation des particules et gestion
-                mémoire pour maintenir un
-                <strong>framerate stable</strong>.
+                Nous avions un mois pour produire une preuve technique démontrant le potentiel du jeu en vue d’une publication sur Steam. Malgré la pression liée à la compétition entre projets, notre équipe a su livrer une démonstration solide grâce à une communication efficace et une bonne organisation.
               </p>
             </div>
           </section>
@@ -186,24 +175,38 @@
             <div class="creditsGroup">
               <h3 class="creditsRole">Gestionnaires</h3>
               <ul class="creditsNames">
-                <li>Xavier Ménard-Beaudoin</li>
+                <li>Mariane Richard (Productrice)</li>
               </ul>
             </div>
 
             <div class="creditsGroup">
               <h3 class="creditsRole">Programmeurs</h3>
               <ul class="creditsNames">
-                <li>Anthony Legros</li>
-                <li>Aryane Duperron</li>
                 <li>Gabriel Gauthier</li>
+                <li>Audrey Langlois </li>
+                
+              </ul>
+            </div>
+
+            <div class="creditsGroup">
+              <h3 class="creditsRole">Designers</h3>
+              <ul class="creditsNames">
+                <li>Mathieu Gaudreau (Level designer)</li>
+                <li>Justin Marques (Designer narratif)</li>
+                <li>Rémi Perreault (Design narratif)</li>
+                <li>Gabriel Anctil (Designer UI/UX)</li>
+                <li>Élodie Vasseur (Designer technique)</li>
               </ul>
             </div>
 
             <div class="creditsGroup">
               <h3 class="creditsRole">Artistes</h3>
               <ul class="creditsNames">
-                <li>Nom 1</li>
-                <li>Nom 2</li>
+                <li>Ariane Labrie (Artiste d’animations)</li>
+                <li>Dee-Lainas Blais (Artiste de personnage)</li>
+                <li>Mélodie Décary-Larocque (Artiste d’environnements)</li>
+                <li>Jessica Bonhomme (Artiste VFX)</li>
+                <li>Camille Boudreault (Artiste de concepts et VFX)</li>
               </ul>
             </div>
 
