--- a/nine.html
+++ b/nine.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gabriel Gauthier | ProjectTemplate</title>
+  <title>Gabriel Gauthier | Nine O'Clock</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
@@ -67,26 +67,27 @@
           <!-- HERO -->
           <section class="techHero">
             <div class="heroLeft">
-              <h1 class="heroTitle">TEMPLATE 2</h1>
+              <h1 class="heroTitle">Nine O'Clock</h1>
 
               <p class="heroDescription">
-                Bolt’N’Punch est un jeu d’action à la première personne développé à l’UQAT
-                par une équipe de 25 finissants, publié sur Steam.
+                Nine O’Clock est un jeu vidéo développé en équipe de 10 personnes durant une session complète dans le
+                cadre d’un cours de projet commun, où le joueur traverse un univers steampunk en grindant sur des rails
+                dans une aventure inspirée du thème imposé Marty McFly.
               </p>
 
               <ul class="heroMeta">
                 <li>Unreal Engine</li>
                 <li>Blueprints</li>
-                <li>Publié sur Steam</li>
+                <li>10 participants</li>
               </ul>
             </div>
 
             <div class="heroRight">
               <div class="videoContainer" data-component="PlayableVideo">
 
-                <video playsinline preload="metadata" poster="assets/images/Big-Horizontal.png">
+                <video playsinline preload="metadata" poster="assets/Nine/images/NineOClockThumbnail.webp">
 
-                  <source src="assets/Bolt/videos/Bolt'n'PunchGameplayTrailer.mp4" type="video/mp4">
+                  <source src="assets/Nine/videos/NineO'Clock.mp4" type="video/mp4">
                 </video>
 
                 <button class="playButton" aria-label="Lire la vidéo">
@@ -97,6 +98,23 @@
             </div>
           </section>
 
+          <!-- BREAKDOWN : TEMPLATE 1 -->
+          <section class="techBreakdownArticle">
+            <div class="breakdownMedia">
+              <img src="assets/Nine/images/NineOClockWorkers.webp" alt="">
+            </div>
+
+            <div class="breakdownContent">
+              <h2 class="breakdownTitle">Mon rôle dans le projet</h2>
+
+              <p>
+                Dans ce projet, j’ai développé le character controller en partant de zéro, en travaillant le ressenti du mouvement
+                (vitesse, contrôle aérien et sauts) pour le rendre agréable à jouer. J’ai également conçu l’interface utilisateur et
+                intégré l’ensemble des menus afin qu’ils fonctionnent autant avec la souris qu’avec une manette.
+              </p>
+            </div>
+          </section>
+
           <!-- FEATURES -->
           <section class="techFeatures">
             <h2 class="sectionTitle">Systèmes clés</h2>
@@ -104,77 +122,55 @@
             <div class="featuresGrid">
 
               <article class="featureCard particleBlocker">
-                <img class="featureImage" src="assets/images/Big-Horizontal.png" alt="">
-                <h3 class="featureTitle">Système de hype</h3>
+                <img class="featureImage" src="assets/Nine/images/NineOClockBlueprint.webp" alt="">
+                <h3 class="featureTitle">Character controller</h3>
 
                 <p>
-                  Nous souhaitions encourager l’utilisation des
-                  <strong>attaques spéciales</strong> plutôt que le simple
-                  enchaînement de coups de base.
-                </p>
-
-                <p>
-                  J’ai pris en charge
-                  <strong>l’implémentation complète</strong> de la logique
-                  et l’équilibrage du système.
+                  NineOClock a été mon premier projet réalisé sur Unreal Engine 5. En partant de zéro, j’ai appris à
+                  développer un character controller agréable à jouer, en travaillant la vitesse, le contrôle aérien et
+                  la hauteur des sauts.
                 </p>
               </article>
 
               <article class="featureCard particleBlocker">
-                <img class="featureImage" src="assets/images/Big.png" alt="">
-                <h3 class="featureTitle">Enemy AI</h3>
+                <img class="featureImage" src="assets/Nine/images/NineUI.webp" alt="">
+                <h3 class="featureTitle">Les menus (UI)</h3>
 
                 <p>
-                  Intelligence basée sur
-                  <strong>Behavior Tree</strong>
-                  et système de perception personnalisé.
+                  Créer une interface fonctionnelle à la fois pour la souris et la manette dans Unreal Engine 5
+                  représentait un défi important, notamment pour assurer une transition fluide entre les deux types
+                  d’entrées. J’ai travaillé à rendre l’expérience claire et cohérente afin d’offrir une interface
+                  accessible et agréable pour tous les joueurs.
                 </p>
               </article>
 
               <article class="featureCard particleBlocker">
-                <img class="featureImage" src="assets/images/Big.png" alt="">
-                <h3 class="featureTitle">Time rewind</h3>
+                <img class="featureImage" src="assets/Nine/images/NineOClockDesign.webp" alt="">
+                <h3 class="featureTitle">Level design</h3>
 
                 <p>
-                  Mécanique centrale avec
-                  <strong>limites d’utilisation</strong>
-                  et conséquences en jeu.
+                  Ce projet m’a permis de développer une solide compréhension du level design et de son impact sur
+                  l’expérience joueur. En analysant notre premier prototype et en repensant entièrement la structure des
+                  niveaux en passant de l'horizontal à un niveau plus vertical, j’ai appris l’importance de l’itération,
+                  du test joueur et de l’adaptation du design pour mieux soutenir le gameplay.
                 </p>
               </article>
 
             </div>
           </section>
 
-          <!-- BREAKDOWN : TEMPLATE 1 -->
-          <section class="techBreakdownArticle">
-            <div class="breakdownMedia">
-              <img src="assets/images/Big-Horizontal.png" alt="">
-            </div>
-
-            <div class="breakdownContent">
-              <h2 class="breakdownTitle">Architecture</h2>
-
-              <p>
-                Le projet est structuré autour de
-                <strong>composants découplés</strong>
-                facilitant l’itération rapide.
-              </p>
-            </div>
-          </section>
 
           <!-- BREAKDOWN : TEMPLATE 2 (reverse) -->
           <section class="techBreakdownArticle reverse">
             <div class="breakdownMedia">
-              <img src="assets/images/Big-Horizontal.png" alt="">
+              <img src="assets/Nine/images/NineOClockGrinding.webp" alt="">
             </div>
 
             <div class="breakdownContent">
               <h2 class="breakdownTitle">Défis techniques</h2>
 
               <p>
-                Optimisation des particules et gestion
-                mémoire pour maintenir un
-                <strong>framerate stable</strong>.
+                Un des principaux défis techniques a été de créer une interface compatible à la fois avec la souris et la manette dans Unreal Engine 5. J’ai dû gérer les différences d’interaction entre les deux modes d’entrée et assurer une transition fluide afin d’offrir une expérience utilisateur cohérente et accessible.
               </p>
             </div>
           </section>
@@ -184,26 +180,31 @@
           <section class="techCredits">
 
             <div class="creditsGroup">
-              <h3 class="creditsRole">Gestionnaires</h3>
+              <h3 class="creditsRole">Programmeurs</h3>
               <ul class="creditsNames">
-                <li>Xavier Ménard-Beaudoin</li>
+                <li>Émile Paré-Allinger</li>
+                <li>Roman Cros</li>
+                <li>Gabriel Gauthier</li>
               </ul>
             </div>
 
             <div class="creditsGroup">
-              <h3 class="creditsRole">Programmeurs</h3>
+              <h3 class="creditsRole">Designers</h3>
               <ul class="creditsNames">
-                <li>Anthony Legros</li>
-                <li>Aryane Duperron</li>
-                <li>Gabriel Gauthier</li>
+                <li>Julien Plamondon</li>
+                <li>Roman Cros</li>
+                <li>Justin Marques</li>
+                <li>Mathieu Gaudreau</li>
               </ul>
             </div>
 
             <div class="creditsGroup">
               <h3 class="creditsRole">Artistes</h3>
               <ul class="creditsNames">
-                <li>Nom 1</li>
-                <li>Nom 2</li>
+                <li>Guillaume St-Germain</li>
+                <li>Jérémie Plamondon</li>
+                <li>Mélodie Décary-Larocque</li>
+                <li>Nathan Flayeux</li>
               </ul>
             </div>
 
