Carnaval project completed

--- a/projects.html
+++ b/projects.html
@@ -196,7 +196,7 @@
                         <p class="projectMeta" data-i18="projects.project1.meta">Beat'em Up <br /> Unreal Engine 5</p>
                         <p class="projectDescription" data-i18="projects.project1.description">Bolt’n’Punch est un
                             jeu...</p>
-                        <a href="templateProject1.html" class="projectButton" data-i18="projects.project1.cta">Voir le
+                        <a href="carnaval.html" class="projectButton" data-i18="projects.project1.cta">Voir le
                             projet</a>
                     </article>
                     <article class="projectCard has-video particleBlocker" data-scrolly='fromBottom'>
