--- a/livraison.html
+++ b/livraison.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gabriel Gauthier | ProjectTemplate</title>
+  <title>Gabriel Gauthier | Livraison Royale</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
@@ -67,26 +67,28 @@
           <!-- HERO -->
           <section class="techHero">
             <div class="heroLeft">
-              <h1 class="heroTitle">TEMPLATE 2</h1>
+              <h1 class="heroTitle">Livraison Royale</h1>
 
               <p class="heroDescription">
-                Bolt’N’Punch est un jeu d’action à la première personne développé à l’UQAT
-                par une équipe de 25 finissants, publié sur Steam.
+                Livraison royale est un jeu de plateforme solo où le joueur doit livrer un colis au roi de la forêt.
+                Développé en seulement deux jours lors de la compétition intercollégiale de jeux vidéo du Cégep de
+                Valleyfield, ce projet m’a permis de relever un défi créatif intense.
               </p>
 
               <ul class="heroMeta">
-                <li>Unreal Engine</li>
-                <li>Blueprints</li>
-                <li>Publié sur Steam</li>
+                <li>Unity C#</li>
+                <li>45h</li>
+                <li>5 Participants</li>
+                <li>Game Jam</li>
               </ul>
             </div>
 
             <div class="heroRight">
               <div class="videoContainer" data-component="PlayableVideo">
 
-                <video playsinline preload="metadata" poster="assets/images/Big-Horizontal.png">
+                <video playsinline preload="metadata" poster="assets/LivraisonRoyale/images/livraison_royal_poster.webp">
 
-                  <source src="assets/Bolt/videos/Bolt'n'PunchGameplayTrailer.mp4" type="video/mp4">
+                  <source src="assets/LivraisonRoyale/videos/Livraison Royale.mp4" type="video/mp4">
                 </video>
 
                 <button class="playButton" aria-label="Lire la vidéo">
@@ -97,6 +99,24 @@
             </div>
           </section>
 
+          <!-- BREAKDOWN : TEMPLATE 1 -->
+          <section class="techBreakdownArticle">
+            <div class="breakdownMedia">
+              <img src="assets/LivraisonRoyale/images/plateformer_livraison.webp" alt="">
+            </div>
+
+            <div class="breakdownContent">
+              <h2 class="breakdownTitle">Mon rôle</h2>
+
+              <p>
+                J’ai pris en charge la programmation C# des mécaniques principales du personnage : double saut, wall
+                jump et lancer de noix. J’ai également ajusté le mouvement pour garantir un contrôle précis et une
+                expérience fluide. Mon rôle m’a permis d’apprendre à itérer rapidement et à intégrer des fonctionnalités
+                au fur et à mesure du développement.
+              </p>
+            </div>
+          </section>
+
           <!-- FEATURES -->
           <section class="techFeatures">
             <h2 class="sectionTitle">Systèmes clés</h2>
@@ -104,77 +124,74 @@
             <div class="featuresGrid">
 
               <article class="featureCard particleBlocker">
-                <img class="featureImage" src="assets/images/Big-Horizontal.png" alt="">
-                <h3 class="featureTitle">Système de hype</h3>
+                <img class="featureImage" src="assets/LivraisonRoyale/images/brainstorm_livraison.webp" alt="">
+                <h3 class="featureTitle">Brainstorm</h3>
 
                 <p>
-                  Nous souhaitions encourager l’utilisation des
-                  <strong>attaques spéciales</strong> plutôt que le simple
-                  enchaînement de coups de base.
+                  Nous avons commencé par un remue-méninge d’1h30 pour imaginer un jeu 2.5D amusant et original autour
+                  du thème de la livraison. Plutôt que de créer un simple jeu de facteur, nous avons choisi des animaux
+                  : un écureuil facteur doit livrer un colis au roi de la forêt en traversant une série d’obstacles
+                  variés.
                 </p>
 
+              </article>
+
+              <article class="featureCard particleBlocker">
+                <img class="featureImage" src="assets/LivraisonRoyale/images/code_livraison.webp" alt="">
+                <h3 class="featureTitle">Character Controller</h3>
+
                 <p>
-                  J’ai pris en charge
-                  <strong>l’implémentation complète</strong> de la logique
-                  et l’équilibrage du système.
+                  J’ai développé le character controller du personnage, en m’assurant que ses déplacements soient
+                  fluides et précis dans le contexte 2.5D. J’ai implémenté le double saut, le wall jump et le dash, en
+                  ajustant la physique pour que le personnage réponde correctement aux obstacles et aux plateformes du
+                  niveau. Cette étape m’a permis de mieux comprendre l’interaction entre gameplay et contrôle du joueur.
                 </p>
               </article>
 
               <article class="featureCard particleBlocker">
-                <img class="featureImage" src="assets/images/Big.png" alt="">
-                <h3 class="featureTitle">Enemy AI</h3>
+                <img class="featureImage" src="assets/LivraisonRoyale/images/livraison_royal.webp" alt="">
+                <h3 class="featureTitle">Input System</h3>
 
                 <p>
-                  Intelligence basée sur
-                  <strong>Behavior Tree</strong>
-                  et système de perception personnalisé.
+                  Pour gérer les entrées, j’ai travaillé avec le nouveau Input System de Unity afin que le personnage
+                  soit jouable à la fois au clavier et à la manette. J’ai configuré les actions et les bindings, puis
+                  testé les transitions entre les différents inputs pour garantir une expérience homogène et réactive.
+                  Cela m’a permis de maîtriser un système moderne et flexible pour les projets futurs.
                 </p>
               </article>
 
               <article class="featureCard particleBlocker">
-                <img class="featureImage" src="assets/images/Big.png" alt="">
-                <h3 class="featureTitle">Time rewind</h3>
+                <img class="featureImage" src="assets/LivraisonRoyale/images/2.5D_livraison.webp" alt="">
+                <h3 class="featureTitle">Level design 2.5D</h3>
 
                 <p>
-                  Mécanique centrale avec
-                  <strong>limites d’utilisation</strong>
-                  et conséquences en jeu.
+                  J’ai conçu tout le level design de la forêt, en plaçant les obstacles et puzzles pour rendre le
+                  gameplay stimulant et réfléchi. L’intégration des prototypes dans la scène finale a généré de nombreux
+                  bugs, qui m’ont obligé à expérimenter et trouver des solutions rapides pour que tout fonctionne avant
+                  la fin du temps imparti. Cette expérience m’a permis de découvrir les défis de la 2.5D et d’améliorer
+                  ma capacité à livrer un jeu complet dans un temps limité.
                 </p>
               </article>
 
             </div>
           </section>
 
-          <!-- BREAKDOWN : TEMPLATE 1 -->
-          <section class="techBreakdownArticle">
-            <div class="breakdownMedia">
-              <img src="assets/images/Big-Horizontal.png" alt="">
-            </div>
 
-            <div class="breakdownContent">
-              <h2 class="breakdownTitle">Architecture</h2>
-
-              <p>
-                Le projet est structuré autour de
-                <strong>composants découplés</strong>
-                facilitant l’itération rapide.
-              </p>
-            </div>
-          </section>
 
           <!-- BREAKDOWN : TEMPLATE 2 (reverse) -->
           <section class="techBreakdownArticle reverse">
             <div class="breakdownMedia">
-              <img src="assets/images/Big-Horizontal.png" alt="">
+              <img src="assets/LivraisonRoyale/images/unity_livraison.webp" alt="">
             </div>
 
             <div class="breakdownContent">
               <h2 class="breakdownTitle">Défis techniques</h2>
 
               <p>
-                Optimisation des particules et gestion
-                mémoire pour maintenir un
-                <strong>framerate stable</strong>.
+                Nous avons expérimenté pour la première fois un jeu en 2.5D et je dois dire que c’était une expérience
+                extrêmement enrichissante (ce qui est le but d’un Game Jam). Cependant, comme à chaque nouvel
+                apprentissage, de nombreux défis et bugs inconnus nous ont barrés la route et nous avons dû passer
+                beaucoup de temps à trouver des alternatives pour les régler.
               </p>
             </div>
           </section>
@@ -184,17 +201,18 @@
           <section class="techCredits">
 
             <div class="creditsGroup">
-              <h3 class="creditsRole">Gestionnaires</h3>
+              <h3 class="creditsRole">Programmeurs</h3>
               <ul class="creditsNames">
-                <li>Xavier Ménard-Beaudoin</li>
+                <li>Gabriel Gauthier</li>
+                <li>Rémi Therrien</li>
+                <li>Caroline Forget</li>
               </ul>
             </div>
 
             <div class="creditsGroup">
-              <h3 class="creditsRole">Programmeurs</h3>
+              <h3 class="creditsRole">Designers</h3>
               <ul class="creditsNames">
-                <li>Anthony Legros</li>
-                <li>Aryane Duperron</li>
+                <li>Caroline Forget</li>
                 <li>Gabriel Gauthier</li>
               </ul>
             </div>
@@ -202,8 +220,8 @@
             <div class="creditsGroup">
               <h3 class="creditsRole">Artistes</h3>
               <ul class="creditsNames">
-                <li>Nom 1</li>
-                <li>Nom 2</li>
+                <li>Jean-Marie Gariépy</li>
+                <li>Audrey Langlois</li>
               </ul>
             </div>
 
