megalophobia project completed

--- a/templateProject2.html
+++ b/templateProject2.html
@@ -94,6 +94,27 @@
                 </button>
 
               </div>
+
+              <!-- <div class="imageContainer">
+                <img src="assets/images/Big-Horizontal.png" alt="Hero image">
+              </div> -->
+            </div>
+          </section>
+
+          <!-- BREAKDOWN : TEMPLATE 1 -->
+          <section class="techBreakdownArticle">
+            <div class="breakdownMedia">
+              <img src="assets/images/Big-Horizontal.png" alt="">
+            </div>
+
+            <div class="breakdownContent">
+              <h2 class="breakdownTitle">Architecture</h2>
+
+              <p>
+                Le projet est structuré autour de
+                <strong>composants découplés</strong>
+                facilitant l’itération rapide.
+              </p>
             </div>
           </section>
 
@@ -145,22 +166,7 @@
             </div>
           </section>
 
-          <!-- BREAKDOWN : TEMPLATE 1 -->
-          <section class="techBreakdownArticle">
-            <div class="breakdownMedia">
-              <img src="assets/images/Big-Horizontal.png" alt="">
-            </div>
 
-            <div class="breakdownContent">
-              <h2 class="breakdownTitle">Architecture</h2>
-
-              <p>
-                Le projet est structuré autour de
-                <strong>composants découplés</strong>
-                facilitant l’itération rapide.
-              </p>
-            </div>
-          </section>
 
           <!-- BREAKDOWN : TEMPLATE 2 (reverse) -->
           <section class="techBreakdownArticle reverse">
