Adding image to about page

--- a/index.html
+++ b/index.html
@@ -24,46 +24,46 @@
     <div data-component="PageTransition" class="page">
     
         <header class="header" data-component="Header">
-            <a href="index.html" class="header__brand">
-                <img class="logo" src="assets/images/logo.png" alt="logo_gab" />
-            </a>
+                <a href="index.html" class="header__brand">
+                    <img class="logo" src="assets/Non-Project/logo.webp" alt="logo_gab" />
+                </a>
 
-            <nav class="nav-primary">
-                <ul>
-                    <li>
-                        <div class="links-wrapper">
-                            <span class="animation-hover inner-wrapper">
-                                <a href="index.html" data-i18="menu.home"
-                                    class="nav-primary__item animation-a">Accueil</a>
-                            </span>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="links-wrapper">
-                            <span class="animation-hover inner-wrapper">
-                                <a href="projects.html" data-i18="menu.projects"
-                                    class="nav-primary__item animation-a">Projets</a>
-                            </span>
-                        </div>
-                    </li>
-                    <li class="nav-right">
-                        <div class="links-wrapper">
-                            <span class="animation-hover inner-wrapper">
-                                <a href="about.html" data-i18="menu.about" class="nav-primary__item animation-a">À
-                                    propos</a>
-                            </span>
-                        </div>
-                    </li>
-                </ul>
-            </nav>
-            <button class="header__toggle js-toggle">
-                <div class="barres">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-            </button>
-        </header>
+                <nav class="nav-primary">
+                    <ul>
+                        <li>
+                            <div class="links-wrapper">
+                                <span class="animation-hover inner-wrapper">
+                                    <a href="index.html" data-i18="menu.home"
+                                        class="nav-primary__item animation-a">Accueil</a>
+                                </span>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="links-wrapper">
+                                <span class="animation-hover inner-wrapper">
+                                    <a href="projects.html" data-i18="menu.projects"
+                                        class="nav-primary__item animation-a">Projets</a>
+                                </span>
+                            </div>
+                        </li>
+                        <li class="nav-right">
+                            <div class="links-wrapper">
+                                <span class="animation-hover inner-wrapper">
+                                    <a href="about.html" data-i18="menu.about" class="nav-primary__item animation-a">À
+                                        propos</a>
+                                </span>
+                            </div>
+                        </li>
+                    </ul>
+                </nav>
+                <button class="header__toggle js-toggle">
+                    <div class="barres">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                </button>
+            </header>
 
         <main>
             <section class="hero">
