Home page traduction completed Project page traduction completed

--- a/about.html
+++ b/about.html
@@ -130,35 +130,35 @@
             <section class="skillsContent" data-scrolly='fromBottom'>
                 <h2 data-scrolly='fromBottom' data-i18="about.skills.title">Mes compétences</h2>
                 <div class="skillCards" data-scrolly='fromBottom'>
-                    <div class="skillCard particleBlocker">
+                    <div class="skillCard ">
                         <div class="aboutImage">
                             <img src="assets/Non-Project/gamingIcon.webp" alt="Gabriel Gauthier" />
                         </div>
                         <h3>Unity - Unreal</h3>
                         <p data-i18="about.skills.unity">Pour faire vivre mes projets et jeux</p>
                     </div>
-                    <div class="skillCard particleBlocker">
+                    <div class="skillCard ">
                         <div class="aboutImage">
                             <img src="assets/Non-Project/programmingIcon.webp" alt="Gabriel Gauthier" />
                         </div>
                         <h3>Java - C++ - C#</h3>
                         <p data-i18="about.skills.unity">Pour créer des systèmes solides et flexibles</p>
                     </div>
-                    <div class="skillCard particleBlocker">
+                    <div class="skillCard ">
                         <div class="aboutImage">
                             <img src="assets/Non-Project/designIcon.webp" alt="Gabriel Gauthier" />
                         </div>
                         <h3>Design</h3>
                         <p data-i18="about.skills.unity">Parce que chaque détails compte</p>
                     </div>
-                    <div class="skillCard particleBlocker">
+                    <div class="skillCard ">
                         <div class="aboutImage">
                             <img src="assets/Non-Project/vrIcon.webp" alt="Gabriel Gauthier" />
                         </div>
                         <h3>Réalité mixte</h3>
                         <p data-i18="about.skills.unity">Pour repousser les limites du possible</p>
                     </div>
-                    <div class="skillCard particleBlocker">
+                    <div class="skillCard ">
                         <div class="aboutImage">
                             <img src="assets/Non-Project/agilityIcon.webp" alt="Gabriel Gauthier" />
                         </div>
@@ -174,7 +174,7 @@
                 <h2 data-scrolly='fromBottom' data-i18="about.passions.title">Mes passions</h2>
 
                 <div class="passionGrid" data-scrolly='fromBottom'>
-                    <div class="passionCard particleBlocker">
+                    <div class="passionCard ">
                         <div class="passionIcon">🎮</div>
                         <h3 data-i18="about.passions.games.title">Jeux vidéo</h3>
                         <p data-i18="about.passions.games.text">
@@ -184,7 +184,7 @@
                         </p>
                     </div>
 
-                    <div class="passionCard particleBlocker">
+                    <div class="passionCard ">
                         <div class="passionIcon">🌿</div>
                         <h3 data-i18="about.passions.nature.title">La nature</h3>
                         <p data-i18="about.passions.nature.text">
@@ -194,7 +194,7 @@
                         </p>
                     </div>
 
-                    <div class="passionCard particleBlocker">
+                    <div class="passionCard ">
                         <div class="passionIcon">🎬</div>
                         <h3 data-i18="about.passions.anime.title">Animés japonais</h3>
                         <p data-i18="about.passions.anime.text">
