--- a/bolt.html
+++ b/bolt.html
@@ -122,7 +122,7 @@
 
           <div class="featuresGrid">
 
-            <article class="featureCard particleBlocker">
+            <article class="featureCard ">
               <img class="featureImage" src="assets/Bolt/images/Bolt_Hype.webp" alt="">
               <h3 class="featureTitle">Système de hype</h3>
 
@@ -139,7 +139,7 @@
               </p>
             </article>
 
-            <article class="featureCard particleBlocker">
+            <article class="featureCard ">
               <img class="featureImage" src="assets/Bolt/images/BoltSounds.webp" alt="">
               <h3 class="featureTitle">Intégration des sons avec Wwise</h3>
 
@@ -152,7 +152,7 @@
               </p>
             </article>
 
-            <article class="featureCard particleBlocker">
+            <article class="featureCard ">
               <img class="featureImage" src="assets/Bolt/images/ExplosiveBarrel.webp" alt="">
               <h3 class="featureTitle">Baril explosif</h3>
 
@@ -165,7 +165,7 @@
               </p>
             </article>
 
-            <article class="featureCard particleBlocker">
+            <article class="featureCard ">
               <img class="featureImage" src="assets/Bolt/images/Bolt_AnimationBlueprint.png" alt="">
               <h3 class="featureTitle">Animation blueprint</h3>
 
@@ -176,7 +176,7 @@
                 futur plus efficace.
               </p>
             </article>
-            <article class="featureCard particleBlocker">
+            <article class="featureCard ">
               <img class="featureImage" src="assets/Bolt/images/HealingCrates.webp" alt="">
               <h3 class="featureTitle">Boîtes de soins</h3>
 
