--- a/fioritura.html
+++ b/fioritura.html
@@ -120,7 +120,7 @@
 
             <div class="featuresGrid">
 
-              <article class="featureCard particleBlocker">
+              <article class="featureCard ">
                 <img class="featureImage" src="assets/Fioritura/images/FiorituraCodeOpti.webp" alt="">
                 <h3 class="featureTitle">Character controller</h3>
 
@@ -130,7 +130,7 @@
 
               </article>
 
-              <article class="featureCard particleBlocker">
+              <article class="featureCard ">
                 <img class="featureImage" src="assets/Fioritura/images/FiorituraPowerUp.webp" alt="">
                 <h3 class="featureTitle">System de Power Up</h3>
 
@@ -139,7 +139,7 @@
                 </p>
               </article>
 
-              <article class="featureCard particleBlocker">
+              <article class="featureCard ">
                 <img class="featureImage" src="assets/Fioritura/images/FiorituraFlower.webp" alt="">
                 <h3 class="featureTitle">Fleur éthéralys</h3>
 
