--- a/livraison.html
+++ b/livraison.html
@@ -123,7 +123,7 @@
 
             <div class="featuresGrid">
 
-              <article class="featureCard particleBlocker">
+              <article class="featureCard ">
                 <img class="featureImage" src="assets/LivraisonRoyale/images/brainstorm_livraison.webp" alt="">
                 <h3 class="featureTitle">Brainstorm</h3>
 
@@ -136,7 +136,7 @@
 
               </article>
 
-              <article class="featureCard particleBlocker">
+              <article class="featureCard ">
                 <img class="featureImage" src="assets/LivraisonRoyale/images/code_livraison.webp" alt="">
                 <h3 class="featureTitle">Character Controller</h3>
 
@@ -148,7 +148,7 @@
                 </p>
               </article>
 
-              <article class="featureCard particleBlocker">
+              <article class="featureCard ">
                 <img class="featureImage" src="assets/LivraisonRoyale/images/livraison_royal.webp" alt="">
                 <h3 class="featureTitle">Input System</h3>
 
@@ -160,7 +160,7 @@
                 </p>
               </article>
 
-              <article class="featureCard particleBlocker">
+              <article class="featureCard ">
                 <img class="featureImage" src="assets/LivraisonRoyale/images/2.5D_livraison.webp" alt="">
                 <h3 class="featureTitle">Level design 2.5D</h3>
 
