--- a/megalophobia.html
+++ b/megalophobia.html
@@ -130,7 +130,7 @@
 
             <div class="featuresGrid">
 
-              <article class="featureCard particleBlocker">
+              <article class="featureCard ">
                 <img class="featureImage" src="assets/Megalophobia/images/brainstorm_megalophobia.webp" alt="">
                 <h3 class="featureTitle">Brainstorm</h3>
 
@@ -143,7 +143,7 @@
 
               </article>
 
-              <article class="featureCard particleBlocker">
+              <article class="featureCard ">
                 <img class="featureImage" src="assets/Megalophobia/images/ai_megalophobia_defi.webp" alt="">
                 <h3 class="featureTitle">Enemy AI</h3>
 
@@ -154,7 +154,7 @@
                 </p>
               </article>
 
-              <article class="featureCard particleBlocker">
+              <article class="featureCard ">
                 <img class="featureImage" src="assets/Megalophobia/images/gameplay_megalophobia.webp" alt="">
                 <h3 class="featureTitle">Mécaniques d’interaction et d’UI</h3>
 
@@ -166,7 +166,7 @@
                 </p>
               </article>
 
-              <article class="featureCard particleBlocker">
+              <article class="featureCard ">
                 <img class="featureImage" src="assets/Megalophobia/images/ui_megalophobia.webp" alt="">
                 <h3 class="featureTitle">Design UI</h3>
 
