--- a/nine.html
+++ b/nine.html
@@ -121,7 +121,7 @@
 
             <div class="featuresGrid">
 
-              <article class="featureCard particleBlocker">
+              <article class="featureCard ">
                 <img class="featureImage" src="assets/Nine/images/NineOClockBlueprint.webp" alt="">
                 <h3 class="featureTitle">Character controller</h3>
 
@@ -132,7 +132,7 @@
                 </p>
               </article>
 
-              <article class="featureCard particleBlocker">
+              <article class="featureCard ">
                 <img class="featureImage" src="assets/Nine/images/NineUI.webp" alt="">
                 <h3 class="featureTitle">Les menus (UI)</h3>
 
@@ -144,7 +144,7 @@
                 </p>
               </article>
 
-              <article class="featureCard particleBlocker">
+              <article class="featureCard ">
                 <img class="featureImage" src="assets/Nine/images/NineOClockDesign.webp" alt="">
                 <h3 class="featureTitle">Level design</h3>
 
