--- a/templateProject2.html
+++ b/templateProject2.html
@@ -124,7 +124,7 @@
 
             <div class="featuresGrid">
 
-              <article class="featureCard particleBlocker">
+              <article class="featureCard ">
                 <img class="featureImage" src="assets/images/Big-Horizontal.png" alt="">
                 <h3 class="featureTitle">Système de hype</h3>
 
@@ -141,7 +141,7 @@
                 </p>
               </article>
 
-              <article class="featureCard particleBlocker">
+              <article class="featureCard ">
                 <img class="featureImage" src="assets/images/Big.png" alt="">
                 <h3 class="featureTitle">Enemy AI</h3>
 
@@ -152,7 +152,7 @@
                 </p>
               </article>
 
-              <article class="featureCard particleBlocker">
+              <article class="featureCard ">
                 <img class="featureImage" src="assets/images/Big.png" alt="">
                 <h3 class="featureTitle">Time rewind</h3>
 
