--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
                     </p>
             
                     <div class="hero__socials">
-                        <a href="#" aria-label="Email">✉️</a>
-                        <a href="#" aria-label="LinkedIn">in</a>
-                        <a href="#" aria-label="YouTube">▶</a>
+                        <a href="https://www.linkedin.com/in/gabrielgauthier-629/" aria-label="LinkedIn" target="_blank"><img src="assets/Non-Project/Linkedin.png" alt=""></a>
+                        <a href="mailto:gab.gauthier2002@gmail.com" aria-label="Email" target="_blank"><img src="assets/Non-Project/Email.png" alt=""></a>
+                        <a href="https://github.com/Gab629" aria-label="Github" z><img src="assets/Non-Project/github.png" alt=""></a>
                     </div>
             
-                    <a href="#" class="btn-primary" data-i18="hero.cta" data-i18-href="hero.cvLink">Visualisez mon
+                    <a href="assets/Non-Project/CV-GabrielGauthier-FR.pdf" target="_blank" class="btn-primary" data-i18="hero.cta" data-i18-href="hero.cvLink">Visualisez mon
                         CV</a>
                 </div>
                 <div class="particles"></div>
