--- a/projects.html
+++ b/projects.html
@@ -74,7 +74,7 @@
                     <article class="projectCard has-video" data-scrolly="fromBottom">
 
                         <div class="projectMedia media-container" data-component="ProjectVideo">
-                            <img src="assets/images/Project-Card.png" alt="Bolt'n'Punch" />
+                            <img src="assets/Bolt/images/bolt-project-card.webp" alt="Bolt'n'Punch" />
                             <video src="assets/videos/Bolt'n'PunchGameplayTrailer.mp4" muted loop playsinline
                                 preload="auto"></video>
                         </div>
@@ -100,8 +100,8 @@
                     <article class="projectCard has-video" data-scrolly="fromBottom">
 
                         <div class="projectMedia media-container" data-component="ProjectVideo">
-                            <img src="assets/images/Project-Card.png" alt="Fioritura" />
-                            <video src="assets/videos/Bolt'n'PunchGameplayTrailer.mp4" muted loop playsinline
+                            <img src="assets/Fioritura/images/fioritura-project-card.webp" alt="Fioritura" />
+                            <video src="assets/Fioritura/videos/Fioritura Teaser.mp4" muted loop playsinline
                                 preload="auto"></video>
                         </div>
 
@@ -126,8 +126,8 @@
                     <article class="projectCard has-video" data-scrolly="fromBottom">
 
                         <div class="projectMedia media-container" data-component="ProjectVideo">
-                            <img src="assets/images/Project-Card.png" alt="Nine O'Clock" />
-                            <video src="assets/videos/Bolt'n'PunchGameplayTrailer.mp4" muted loop playsinline
+                            <img src="assets/Nine/images/nine-project-card.webp" alt="Nine O'Clock" />
+                            <video src="assets/Nine/videos/NineO'Clock.mp4" muted loop playsinline
                                 preload="auto"></video>
                         </div>
 
@@ -157,8 +157,8 @@
   <!-- REX MONTIS -->
   <article class="projectCard has-video" data-scrolly="fromBottom">
     <div class="projectMedia media-container" data-component="ProjectVideo">
-      <img src="assets/images/Project-Card.png" alt="Rex Montis" />
-      <video src="assets/videos/Bolt'n'PunchGameplayTrailer.mp4" muted loop playsinline preload="auto"></video>
+      <img src="assets/RexMontis/images/rexmontis-project-card.webp" alt="Rex Montis" />
+      <video src="assets/RexMontis/videos/RexMontis.mp4" muted loop playsinline preload="auto"></video>
     </div>
 
     <h3 class="projectTitle" data-i18="projects.rexmontis.title">Rex Montis</h3>
@@ -176,8 +176,8 @@
   <!-- LATENCY -->
   <article class="projectCard has-video" data-scrolly="fromBottom">
     <div class="projectMedia media-container" data-component="ProjectVideo">
-      <img src="assets/images/Project-Card.png" alt="Latency" />
-      <video src="assets/videos/Bolt'n'PunchGameplayTrailer.mp4" muted loop playsinline preload="auto"></video>
+      <img src="assets/Latency/images/latency-project-card.webp" alt="Latency" />
+      <video src="assets/Latency/videos/Latency.mp4" muted loop playsinline preload="auto"></video>
     </div>
 
     <h3 class="projectTitle" data-i18="projects.latency.title">Latency</h3>
@@ -195,8 +195,8 @@
   <!-- CARNAVAL VR -->
   <article class="projectCard has-video" data-scrolly="fromBottom">
     <div class="projectMedia media-container" data-component="ProjectVideo">
-      <img src="assets/images/Project-Card.png" alt="Carnaval VR" />
-      <video src="assets/videos/Bolt'n'PunchGameplayTrailer.mp4" muted loop playsinline preload="auto"></video>
+      <img src="assets/Carnaval/images/carnaval-project-card.webp" alt="Carnaval VR" />
+      <video src="assets/Carnaval/videos/CarnavalVR.mp4" muted loop playsinline preload="auto"></video>
     </div>
 
     <h3 class="projectTitle" data-i18="projects.carnavalvr.title">Carnaval VR</h3>
@@ -214,8 +214,8 @@
   <!-- LIVRAISON ROYALE -->
   <article class="projectCard has-video" data-scrolly="fromBottom">
     <div class="projectMedia media-container" data-component="ProjectVideo">
-      <img src="assets/images/Project-Card.png" alt="Livraison Royale" />
-      <video src="assets/videos/Bolt'n'PunchGameplayTrailer.mp4" muted loop playsinline preload="auto"></video>
+      <img src="assets/LivraisonRoyale/images/livraison-project-card.webp" alt="Livraison Royale" />
+      <video src="assets/LivraisonRoyale/videos/Livraison Royale.mp4" muted loop playsinline preload="auto"></video>
     </div>
 
     <h3 class="projectTitle" data-i18="projects.livraisonroyale.title">Livraison Royale</h3>
@@ -233,8 +233,8 @@
   <!-- MÉGALOPHOBIA -->
   <article class="projectCard has-video" data-scrolly="fromBottom">
     <div class="projectMedia media-container" data-component="ProjectVideo">
-      <img src="assets/images/Project-Card.png" alt="Mégalophobia" />
-      <video src="assets/videos/Bolt'n'PunchGameplayTrailer.mp4" muted loop playsinline preload="auto"></video>
+      <img src="assets/Megalophobia/images/megalophobia-project-card.webp" alt="Mégalophobia" />
+      <!-- <video src="assets/videos/Bolt'n'PunchGameplayTrailer.mp4" muted loop playsinline preload="auto"></video> -->
     </div>
 
     <h3 class="projectTitle" data-i18="projects.megalophobia.title">Mégalophobia</h3>
